# PluginEdgeCFD-SSH

./: CMakeLists.all.txt.bak  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  ViewVtk.cpp  ViewVtk.h  config.ini  configansys.cpp  configansys.h  configansys.ui  exec.aps  exec.rc  formOrdenado.h  forms.h  io.cpp  io.h  main.cpp  resource.h  resource1.h  resource2.h  resources.qrc  runEdgeCFD.aps  runEdgeCFD.pro  runEdgeCFD.rc  runEdgeCFD.sln  runEdgeCFD.vcxproj  runEdgeCFD.vcxproj.filters  runEdgeCFD1.aps  runedgecfd.cpp  runedgecfd.h  runedgecfd.qrc  runedgecfd.ui  teste.GEO  teste.case
Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  runEdgeCFD.lastbuildstate
FlowSsh/: License.txt
FlowSsh/Binaries/: FlowSshC32.lib  FlowSshC64.lib
FlowSsh/include/: FlowSshC.h  FlowSshCpp.h  FlowSshCppUtils.h
FlowSsh/lib/: FlowSshCpp.lib
GeneratedFiles/: qrc_runedgecfd.cpp  ui_configansys.h  ui_menuAnsys.h  ui_runedgecfd.h
GeneratedFiles/Debug/: moc_configansys.cpp  moc_runedgecfd.cpp
GeneratedFiles/Release/: moc_configansys.cpp  moc_runedgecfd.cpp
bin - Copy/: config.ini
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  moc_ProcessStatusDialog.cxx_parameters  moc_ViewVtk.cxx_parameters  moc_configansys.cxx  moc_configansys.cxx_parameters  moc_formOrdenado.cxx_parameters  moc_forms.cxx_parameters  moc_io.cxx_parameters  moc_resource.cxx_parameters  moc_resource1.cxx_parameters  moc_resource2.cxx_parameters  moc_runedgecfd.cxx  moc_runedgecfd.cxx_parameters  qrc_runedgecfd.cxx  resources.qrc.depends  runEdgeCFD.sln  runEdgeCFD.vcxproj  runEdgeCFD.vcxproj.filters  ssh.cpp  ssh.h  sshCFD.exe.ori  terminal.txt  ui_configansys.h  ui_menuAnsys.h  ui_runedgecfd.h
build2/Debug/: runEdgeCFD.ilk
build2/runEdgeCFD.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate  (+3 more)
edgecfd/MACROS/: BATCH.bat  CMD.BAT  OPEN.mac  SETUP_EDGECFD_REV-A.MAC
x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  RCa09380  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  runEdgeCFD.lastbuildstate  runEdgeCFD.res
x64/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog  runEdgeCFD.lastbuildstate
